config-and-policy/namespaces/abstract-app-namespace/t-rex-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: t-rex-app
  labels:
    cost-center: trexapp.anthos-config-management-demo.com
