config-and-policy/namespaces/abstract-app-namespace/t-rex-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: t-rex-app
  labels:
    app: t-rex-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: t-rex-app
  template:
    metadata:
      labels:
        app: t-rex-app
    spec:
      containers:
      - name: t-rex-app
        image: ejmadkins/t-rex-runner:1.0.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "200m"
            memory: "1Gi"
        securityContext:
          runAsUser: 2000
          allowPrivilegeEscalation: false
