config-and-policy/namespaces/abstract-app-namespace/t-rex-app/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: t-rex-app
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: nginx
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "200m"
            memory: "1Gi"
        securityContext:
          runAsUser: 2000
          allowPrivilegeEscalation: true
