config-and-policy/namespaces/abstract-app-namespace/t-rex-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: t-rex-app-service
  namespace: t-rex-app
spec:
  selector:
    app: t-rex-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
