config-and-policy/namespaces/abstract-app-namespace/t-rex-app/t-rex-app-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-t-rex-ingress
spec:
  policyTypes:
  - Ingress
  podSelector: k8s-app: kube-dns
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 8080
